# post_trade_analytics

./: .gitignore  README.md  pyproject.toml
data/raw/: sample_trades.csv
reports/: pta_summary.csv
src/: __init__.py  pta_analysis.py
